# fastapi-rest-mdb

./: .gitignore  Makefile  pyproject.toml
fastapi_rest_mdb/api_v1/: __init__.py  users.py
fastapi_rest_mdb/api_v1/exception_handlers/: __init__.py
fastapi_rest_mdb/api_v1/middlewares/: __init__.py
fastapi_rest_mdb/app/: app.py  db.py  logger.py  main.py  settings.py
fastapi_rest_mdb/app/exception_handlers/: __init__.py
fastapi_rest_mdb/app/middlewares/: __init__.py
fastapi_rest_mdb/logics/: user_logic.py
tests/: test_app.py
tests/logics/: test_user_logic.py
