[tool.poetry]
name = "fastapi-rest-mdb"
version = "0.0.0-dev"
description = ""
authors = ["Carlos Martin Sanchez <carlosvin@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_rest_mdb"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
python-json-logger = "^2.0.4"
motor = "^3.0.0"

[tool.poetry.group.dev.dependencies]
prospector = {extras=["with_everything"], version="^1.7.7"}
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
